--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -115,14 +115,14 @@
 
    2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
-       ```bash
-       cd /home/admin/oceanbase/bin
+       ```shell
+       [admin@xxx /]$ cd /home/admin/oceanbase/bin
        ```
 
    3. 执行以下命令，查看并获取节点的进程 ID。
 
-      ```bash
-      ps -ef | grep observer | grep -v grep
+      ```shell
+      [admin@xxx bin]$ ps -ef | grep observer | grep -v grep
       admin    103364      1 99  2022 ?        51-17:51:06 /home/admin/oceanbase/bin/observer
       ```
 
@@ -130,16 +130,16 @@
 
       命令如下：
 
-      ```bash
-      kill -9 pid
+      ```shell
+      [admin@xxx oceanbase]$ kill -9 pid
       ```
 
       其中，`pid` 为待停止的节点的 observer 进程 ID。
 
       示例如下：
 
-      ```bash
-      kill -9 103364
+      ```shell
+      [admin@xxx oceanbase]$ kill -9 103364
       ```
 
 ## 相关文档
