--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -20,13 +20,13 @@
 
 2. 通过命令行工具进入 `/home/admin/oceanbase/etc` 目录。
 
-   ```bash
+   ```shell
    cd /home/admin/oceanbase/etc
    ```
 
 3. 执行以下命令，查看文件中的内容。
 
-   ```bash
+   ```shell
    strings observer.config.bin
    ```
 
