--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -18,7 +18,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-  obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -70,13 +70,13 @@
    2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
        ```bash
-       cd /home/admin/oceanbase/bin
+       [admin@xxx /]$ cd /home/admin/oceanbase/bin
        ```
 
    3. 执行以下命令，查看并获取节点的进程 ID。
 
       ```bash
-      ps -ef | grep observer | grep -v grep
+      [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
       admin    103364      1 99  2022 ?        51-17:24:41 /home/admin/oceanbase/bin/observer
       ```
 
@@ -87,7 +87,7 @@
       命令如下：
 
       ```bash
-      kill -9 pid
+      [admin@xxx oceanbase]$ kill -9 pid
       ```
 
       其中，`pid` 为待停止的节点的 observer 进程 ID。
@@ -95,13 +95,13 @@
       示例如下：
 
       ```bash
-      kill -9 103364
+      [admin@xxx oceanbase]$ kill -9 103364
       ```
 
    5. 执行以下命令，确认进程是否已停止。
 
        ```bash
-       ps aux | grep observer
+       [admin@xxx oceanbase]$ ps aux | grep observer
        ```
 
        如果命令执行后没有返回信息，则表示进程停止成功。
@@ -115,7 +115,7 @@
    2. 启动 observer 进程。
 
       ```bash
-      cd /home/admin/oceanbase  &&  ./bin/observer
+      [admin@xxx oceanbase]$ cd /home/admin/oceanbase  &&  ./bin/observer
       ```
 
 7. 执行以下命令，启动节点服务。
