--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -118,7 +118,7 @@ Cancel Delete Server 的具体操作如下：
 
    连接示例如下，连接数据库时请以实际环境为准。
 
-   ```bash
+   ```shell
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
