--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -10,38 +10,38 @@
 
 ## 操作步骤
 
-1. （可选）如果需要增加 Zone 后再向该 Zone 中增加 OBServer 节点，请确认已增加 Zone，增加 Zone 的操作请参见 [增加 Zone](5.add-a-zone.md)。
+1. （可选）如果需要增加 Zone 后再向该 Zone 中增加 OBServer 服务器，请确认已增加 Zone，增加 Zone 的操作请参见 [增加 Zone](5.add-a-zone.md)。
 
-2. 通过 `ssh` 登录到待添加的节点，进行安装前检查。
+2. 通过 `ssh` 登录到待添加的 OBServer 服务器，进行安装前检查。
 
-   1. 使用 `root` 用户依次登录到待增加的节点所在的机器上。
+   1. 使用 `root` 用户依次登录到待增加 OBServer 服务器。
 
    2. 执行以下命令，开始检查。
 
-      ```bash
-      cd /root/t-oceanbase-antman/clonescripts
+      ```shell
+      [root@xxx /]# cd /root/t-oceanbase-antman/clonescripts
 
-      sh precheck.sh -m ob
+      [root@xxx clonescripts]# sh precheck.sh -m ob
       ```
 
    3. 执行以下命令，检查时钟同步情况，保证所有节点的时钟偏差在 100 ms 以内。
 
-      ```bash
-      ntpdate $IP
+      ```shell
+      [root@xxx clonescripts]#  ntpdate $IP
       ```
 
       其中，$IP 表示集群中其他节点的 IP 地址。
 
-3. 通过 `ssh` 登录到待添加的节点，安装 OceanBase 数据库的 RPM 包。
+3. 通过 `ssh` 登录到待添加的 OBServer 服务器，安装 OceanBase 数据库的 RPM 包。
 
-   在增加节点前，需要为待增加的所有节点安装数据库软件。
+   在增加节点前，需要为待增加的所有 OBServer 服务器安装数据库软件。
 
    命令如下：
 
    ```shell
-   cd $rpm_dir
+   [root@xxx /]#cd $rpm_dir
    
-   rpm -i --prefix=/home/admin/oceanbase $rpm_name
+   [root@xxx $rpm_dir]#rpm -i --prefix=/home/admin/oceanbase $rpm_name
    ```
 
    其中，`rpm_dir` 表示存放 RPM 包的目录；`$rpm_name` 表示 RPM 包的名称。
@@ -49,22 +49,22 @@
 4. 通常情况下，使用 `/data/1` 作为数据目录，`/data/log1` 作为日志目录。需要在待增加的 OBServer 服务器上创建 `/data/1` 和 `/data/log1` 目录，并将目录的拥有者（Owner）修改为 `admin`。
 
    ```shell
-   mkdir -p /data/1 /data/log1
+   [root@xxx /]# mkdir -p /data/1 /data/log1
 
-   cd data
+   [root@xxx /]# cd data
 
-   ll
+   [root@xxx data]# ll
    total 8
    drwxr-xr-x 2 root root 4096 Nov 18 14:24 1
    drwxr-xr-x 2 root root 4096 Nov 18 14:24 log1
 
-   cd ..
+   [root@xxx data]# cd ..
 
-   chown -R admin:admin data
+   [root@xxx /]#chown -R admin:admin data
+ 
+   [root@xxx /]# cd data
 
-   cd data
-
-   ll
+   [root@xxx data]# ll
    total 8
    drwxr-xr-x 2 admin admin 4096 Nov 18 14:24 1
    drwxr-xr-x 2 admin admin 4096 Nov 18 14:24 log1
@@ -75,7 +75,7 @@
    OceanBase 数据库的数据目录通常建议设置在独立的磁盘上，然后通过软链接方式链接到软件的 `Home` 目录下面。
 
    ```shell
-   su - admin
+   [root@xxx admin]#su - admin
    -bash-4.2$ mkdir -p /data/1/$cluster_name/{etc3,sort_dir,sstable,slog} 
    -bash-4.2$ mkdir -p /data/log1/$cluster_name/{clog,etc2,ilog,oob_clog} 
    -bash-4.2$ mkdir -p /home/admin/oceanbase/store/$cluster_name
@@ -83,12 +83,12 @@
    -bash-4.2$ for t in {clog,etc2,ilog,oob_clog};do ln -s /data/log1/$cluster_name/$t /home/admin/oceanbase/store/$cluster_name/$t; done
    ```
 
-   其中，`cluster_name` 表示待添加 OBServer 节点的集群名。
+   其中，`cluster_name` 表示待添加 OBServer 服务器的集群。
 
    示例如下：
 
    ```shell
-   su - admin
+   [root@xxx admin]#su - admin
    -bash-4.2$ mkdir -p /data/1/obdemo/{etc3,sort_dir,sstable,slog} 
    -bash-4.2$ mkdir -p /data/log1/obdemo/{clog,etc2,ilog,oob_clog} 
    -bash-4.2$ mkdir -p /home/admin/oceanbase/store/obdemo
@@ -98,18 +98,18 @@
 
 6. 启动 observer 进程。
 
-   1. 使用 `admin` 用户登录到待增加的节点所在的机器上。
+   1. 使用 `admin` 用户登录到待增加的 OBServer 服务器上。
 
    2. 设置 `admin` 用户的 ulimit。
 
       ```shell
-      ulimit -s 10240; ulimit -c unlimited
+      [admin@xxx /]$ulimit -s 10240; ulimit -c unlimited
       ```
 
    3. 配置环境变量。
 
       ```shell
-      $ export LD_LIBRARY_PATH=/home/admin/oceanbase/lib:$LD_LIBRARY_PATH LD_PRELOAD=''
+      [admin@xxx /]$ export LD_LIBRARY_PATH=/home/admin/oceanbase/lib:$LD_LIBRARY_PATH LD_PRELOAD=''
       ```
 
    4. 执行以下命令，启动 observer 进程。
@@ -117,9 +117,9 @@
       语句如下：
 
       ```shell
-      cd /home/admin/oceanbase
+      [admin@xxx /]$ cd /home/admin/oceanbase
 
-      ./bin/observer -i eth0 -c $cluster_id -p xxxx -P xxxx -z $zone_name -n $cluster_name -d ‘/home/admin/oceanbase/store/$cluster_name’ -r 'SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT' -l WARN -o 'memory_limit=100GB,datafile_disk_percentage=85,config_additional_dir=/data/1/cluster_name/etc3;/data/log1/cluster_name/etc2'
+      [admin@xxx oceanbase]$ ./bin/observer -i eth0 -c $cluster_id -p xxxx -P xxxx -z $zone_name -n $cluster_name -d ‘/home/admin/oceanbase/store/$cluster_name’ -r 'SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT' -l WARN -o 'memory_limit=100GB,datafile_disk_percentage=85,config_additional_dir=/data/1/cluster_name/etc3;/data/log1/cluster_name/etc2'
       ```
 
       相关参数说明如下：
@@ -159,9 +159,9 @@
       示例如下：
 
       ```shell
-      cd /home/admin/oceanbase
+      [admin@xxx /]$ cd /home/admin/oceanbase
 
-      ./bin/observer -i eth0 -c 20221216 -p 2881 -P 2882 -z 'zone4' -n 'obdemo' -d '/home/admin/oceanbase/store/obdemo' -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -l WARN -o 'memory_limit=100GB,datafile_disk_percentage=85'
+      [admin@xxx oceanbase]$ ./bin/observer -i eth0 -c 20221216 -p 2881 -P 2882 -z 'zone4' -n 'obdemo' -d '/home/admin/oceanbase/store/obdemo' -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -l WARN -o 'memory_limit=100GB,datafile_disk_percentage=85'
       ```
 
 7. 向集群中添加节点。
@@ -197,7 +197,7 @@
       obclient [none]> ALTER SYSTEM ADD SERVER 'xx.xx.xx.10:2882;xx.xx.xx.11:2882;xx.xx.xx.12:2882' ZONE 'zone4';
       ```
 
-      该操作会将 OBServer 加入到服务列表，只有服务列表中的 OBServer 才可以提供服务。
+      该操作会将 OBServer 服务器加入到服务列表，只有服务列表中的 OBServer 服务器才可以提供服务。
 
 8. 执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图进行确认。
 
@@ -207,7 +207,7 @@
    obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
-   列表中有刚刚添加的 OBServer，则表示添加成功。
+   列表中有刚刚添加的 OBServer 服务器，则表示添加成功。
 
 ## 相关文档
 
