--- a/zh-CN/6.manage/5.security-permissions/2.authentication-and-authentication/2.security-permissions-oracle-mode/1.province-identification-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-permissions/2.authentication-and-authentication/2.security-permissions-oracle-mode/1.province-identification-of-oracle-mode.md
@@ -2,6 +2,11 @@
 
 本文主要介绍 Oracle 模式的身份鉴别功能。
 
+<main id="notice" >
+            <h4>功能适用性</h4>
+            <p>本功能仅适用于 OceanBase 数据库企业版。目前 OceanBase 数据库社区版仅提供了 MySQL 模式，有关 MySQL 模式下的身份鉴别，参见 <a href="../1.security-permissions-mysql-mode/1.province-identification-of-mysql-mode.md">身份鉴别</a> 。</p>
+          </main>
+
 ## 背景信息
 
 身份标识与鉴别功能用于对登录数据库访问数据的用户进行身份验证，确认该用户是否能够与某一个数据库用户进行关联，并根据关联的数据库用户的权限，对该用户在数据库中的数据访问活动进行安全控制。
