--- a/zh-CN/6.manage/5.security-permissions/3..access-control/1.access-control-oracle-mode/5.permission-check-of-oracle.md
+++ b/zh-CN/6.manage/5.security-permissions/3..access-control/1.access-control-oracle-mode/5.permission-check-of-oracle.md
@@ -6,7 +6,7 @@
 
 在 Resolver 阶段，解析出一条 SQL 语句中所需的所有权限，逐个检查用户是否拥有对应的权限。对于系统操作的权限，如果权限不足则直接报错权限不足。对于访问对象的权限，如果用户在这个对象上没有任何权限，则报错对象不存在；如果用户在这个对象上有其他权限，只是没有需要的权限，则报错权限不足。
 
-## 通过 SQL 语句查看用户权限
+## 查看用户权限
 
 1. 登录数据库的 Oracle 租户。
 
