--- a/zh-CN/6.manage/5.security-permissions/4.data-transfer-encryption/3.how-to-confirm-that-communication-encryption-is-enabled-successfully.md
+++ b/zh-CN/6.manage/5.security-permissions/4.data-transfer-encryption/3.how-to-confirm-that-communication-encryption-is-enabled-successfully.md
@@ -1,4 +1,6 @@
-# 检查 MySQL 端口是否开启 SSL
+# 如何确定通信加密开启成功
+
+## 检查 MySQL 端口是否开启 SSL
 
 通过 MySQL/OBClient 登录，执行`\s`查看 SSL 字段的示例如下：
 
@@ -24,3 +26,7 @@ Conn.  characterset: utf8mb4
 TCP port:  13213
 Active   --------------
 ```
+
+## 检查 RPC 端口是否开启 SSL
+
+在 `OBServer.log` 中的日志，搜索关键字 "RPC connection accept" 查看 use_ssl = True 还是 False 判定是否 RPC SSL 开启成功。
