--- a/zh-CN/6.manage/5.security-permissions/3..access-control/1.access-control-oracle-mode/3.role-of-oracle.md
+++ b/zh-CN/6.manage/5.security-permissions/3..access-control/1.access-control-oracle-mode/3.role-of-oracle.md
@@ -4,30 +4,24 @@
 
 ## 默认角色
 
-系统在创建新租户时内置了三个默认的角色：
+当前，OceanBase 数据库中默认有以下系统角色：
 
-* DBA：拥有绝大多数的系统权限。
-* RESOURCE：拥有 `Resource` 角色的用户只可以在自己的 Schema 中创建数据库对象。
-* CONNECT：拥有 `Connect` 权限的用户只可以登录数据库。
+* `CONNECT` 角色
 
-## 查看角色
+  该角色提供了 `CREATE SESSION` 系统权限。如果您需要授予某个用户 `CREATE SESSION` 系统权限，除了直接授予该权限，您也可以通过授予用户 `CONNECT` 角色的方式来实现。
+  
+* `RESOURCE` 角色
 
-查看角色的场景如下：
+  该角色提供了以下系统权限：`CREATE CLUSTER`、`CREATE INDEXTYPE`、`CREATE OPERATOR`、`CREATE PROCEDURE`、`CREATE SEQUENCE`、`CREATE TABLE`、`CREATE TRIGGER` 和 `CREATE TYPE`。
 
-* 查看当前系统中的角色
+  您可以通过 `DBA_SYS_PRIVS` 字典视图查看该角色所包含的权限。
+  
+* `DBA` 角色
 
-  管理员可以通过 `DBA_ROLES` 视图查看系统中的所有角色。
+  该角色拥有非常强大的权限，提供了大量的系统权限，例如： `DELETE ANY TABLE` 和 `GRANT ANY PRIVILEGE` 等权限。
 
-  ```sql
-  obclient> SELECT * FROM DBA_ROLES;
-  +----------+-------------------+---------------------+
-  | ROLE     | PASSWORD_REQUIRED | AUTHENTICATION_TYPE |
-  +----------+-------------------+---------------------+
-  | CONNECT  | NO                | NONE                |
-  | RESOURCE | NO                | NONE                |
-  | DBA      | NO                | NONE                |
-  +----------+-------------------+---------------------+
-  5 rows in set
-  ```
-
-  更多 `DBA_ROLES` 视图的字段及说明请参见 [DBA_ROLES](../../../../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/91.DBA_ROLES-1.md)。
+  您可以通过 `DBA_SYS_PRIVS` 字典视图查看该角色所包含的权限。
+  
+  >**注意**
+  >
+  >为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。
