--- a/zh-CN/6.manage/5.security-permissions/3..access-control/2.access-control-mysql-mode/2..permission-classification-of-mysql.md
+++ b/zh-CN/6.manage/5.security-permissions/3..access-control/2.access-control-mysql-mode/2..permission-classification-of-mysql.md
@@ -2,7 +2,7 @@
 
 本文主要介绍 OceanBase 数据库 MsSQL 模式下的权限分类。
 
-## 权限分类
+## 分类
 
 MySQL 模式的权限分为了 3 个级别：
 
@@ -10,78 +10,46 @@ MySQL 模式的权限分为了 3 个级别：
 * 数据库权限：可以影响某个特定数据库下所有对象的权限，例如：在对应数据库下创建删除表，访问表等权限。
 * 对象权限：可以影响某个特定对象的权限，例如：访问一个特定的表、视图或索引的权限。
 
-## 通过 SQL 语句授予权限
+当前 OceanBase 数据库中 MySQL 模式相关的权限列表如下表所示。
 
-您可以通过 `GRANT` 语句授予用户管理级权限、数据库级权限或对象权限。
-
-### 前提条件
-
-当前用户必须拥有被授予的权限（例如，`test1` 把表 `t1` 的 `SELECT` 权限授予 `test2`，则 `test1` 必须拥有表 `t1` 的 `SELECT` 的权限），并且拥有 `GRANT OPTION`权限，才能授予成功。
-
-查看当前拥有权限的操作请参见 [查看用户权限](../3.mysql-3/4.view-user-permissions-1.md)。
-
-### 注意事项
-
-进行授权前，需要注意以下事项：
-
-* 给特定用户授予权限时，如果用户不存在，可以直接创建用户。如果 `sql_mode='no_auto_create_user'`，且语句中没有 `IDENTIFIED BY` 指定密码时，不可以直接创建用户。
-
-* 同时把多个权限赋予用户时，权限类型用英文逗号（,）分隔。
-
-* 同时给多个用户授权时，用户名用英文逗号（,）分隔。
-
-* 用户被授权后，该用户只有重新连接 OceanBase 数据库，权限才能生效。
-
-* 由于目前没有 `CHANGE EFFECTIVE TENANT` 的权限控制，故 `sys` 租户下的用户都可以进行授权。
-
-### 操作示例
-
-* 授予管理级权限
-
-  管理级权限即全局权限，该权限适用于所有数据库。通常使用 `GRANT ... ON *.*` 授予管理级权限。
-
-  * 将所有数据库的所有对象的权限授予用户 `test`。
-
-    ```sql
-    obclient> GRANT ALL ON *.* TO test;
-    ```
-
-  * 将所有数据库中所有表的 `INSERT` 、`SELECT` 权限授予用户 `test`。
-
-    ```sql
-    obclient> GRANT SELECT, INSERT ON *.* TO test;
-    ```
-
-* 授予数据库级权限
-
-  数据库级权限是指某个指定的数据库中所有对象的操作权限。通常使用 `GRANT ... ON db_name.*` 授予数据库级权限。
-
-  * 将数据库 `db1` 的所有对象的操作权限授予用户 `test`。
-
-    ```sql
-    obclient> GRANT ALL ON db1.* TO test;
-    ```
-
-  * 将数据库 `db1` 的所有表的 `INSERT` 、`SELECT` 权限授予用户 `test`。
-
-    ```sql
-    obclient> GRANT SELECT, INSERT ON db1.* TO test;
-    ```
-
-* 授予表级权限
-
-  对象权限是指某个指定的数据库中的指定表的操作权限。通常使用 `GRANT ... ON db_name.tb1_name` 授予对象权限。
-
-  * 将数据库 `db1` 的表 `tb1_name` 的 `INSERT` 、`SELECT` 权限授予用户 `test`。
-
-    ```sql
-    obclient> GRANT SELECT, INSERT ON db1.tb1_name TO test; 
-    ```
-
-  * 将数据库 `db1` 的表 `tb1_name` 的操作权限授予用户 `test`。
-
-    ```sql
-    obclient> GRANT ALL ON db1.tb1_name TO test;
-    ```
-
-更多 `GRANT` 语句的信息请参见 [GRANT](../../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/35.GRANT.md)。
+|          权限类别          |           权限           |                                         描述                                          |
+|------------------------|------------------------|-------------------------------------------------------------------------------------|
+|  对象权限  | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
+|  对象权限  | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
+|  对象权限  | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
+|  对象权限  | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
+|  对象权限  | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
+|  对象权限  | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
+|  对象权限  | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
+|  对象权限  | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
+|  对象权限  | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
+|  对象权限  | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
+| 数据库级权限                 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
+| 数据库级权限                 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
+| 数据库级权限                 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
+| 数据库级权限                 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
+| 数据库级权限                 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
+| 数据库级权限                 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
+| 数据库级权限                 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
+| 数据库级权限                 | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
+| 数据库级权限                 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
+| 数据库级权限                 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
+|  用户级权限 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
+|  用户级权限 | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
+|  用户级权限 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
+|  用户级权限 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
+|  用户级权限 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
+|  用户级权限 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
+|  用户级权限 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
+|  用户级权限 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
+|  用户级权限 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
+|  用户级权限 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
+|  用户级权限 | ALTER TENANT           | 修改租户信息的权限。                                                                          |
+|  用户级权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
+|  用户级权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
+|  用户级权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
+|  用户级权限 | CREATE USER            | 确定用户是否可以执行 `CREATE USER` 命令，这个命令用于创建新的 MySQL 账号。                                    |
+|  用户级权限 | PROCESS                | 确定用户是否可以通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。                                          |
+|  用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。                                            |
+|  用户级权限 | FILE                   | 确定用户是否可以执行 `SELECT INTO OUTFILE` 和 `LOAD DATA INFILE` 命令。                           |
+|  用户级权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过`KILL`命令删除用户进程，使用 `SET GLOBAL` 修改全局MySQL 变量，执行关于复制和日志的各种命令。 |
