--- a/zh-CN/6.manage/5.security-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/1.configure-internal-storage-encryption-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-permissions/5.data-storage-encryption/2.data-storage-encryption-of-mysql-mode/1.configure-internal-storage-encryption-of-mysql-mode.md
@@ -1,4 +1,4 @@
-# 配置 internal 方式的存储加密
+# 为新创建的表设置存储加密
 
 本节主要介绍如何创建加密表空间来对新创建的表实现数据存储的加密。
 
@@ -12,9 +12,9 @@ OceanBase 数据库数据的加密单位为表空间（Tablespace）。表空间
 
 本节以在加密表空间 `sectest_ts1` 上创建表 `t1` 为例，提供数据存储加密的操作指导。
 
-## 配置示例
+## 配置 internal 方式的存储加密
 
-以 internal 方式的存储主密钥，其加密信息主要在内部表中进行管理。为了避免日志回放时的循环依赖，该加密方式下的 Clog 不做加密。
+internal 方式的存储主密钥，其加密信息主要在内部表中进行管理。为了避免日志回放时的循环依赖，该加密方式下的 Clog 不做加密。
 
 1. 管理员用户登录到数据库的 MySQL 租户。
 
@@ -57,3 +57,35 @@ OceanBase 数据库数据的加密单位为表空间（Tablespace）。表空间
    ```sql
    obclient> CREATE TABLESPACE sectest_ts1 encryption = 'y'; 
    ```
+
+## 验证加密是否配置成功
+
+加密配置完成后，您可以通过以下方式进行确认。
+
+1. 普通用户登录到数据库的 MySQL 租户。
+
+2. 进入对应的数据库后，创建表并指定表空间。
+
+   ```sql
+   obclient> CREATE TABLE t1 (id1 int, id2 int) TABLESPACE sectest_ts1;
+   ```
+
+   创建后，该表对应的任何事务都需要加密。
+
+3. 确认表空间内的表是否标记为加密。
+
+   执行以下语句，查看 `encryptionalg` 是否为之前设置的 `aes-256`。
+
+   ```sql
+   obclient> SELECT table_name,encryptionalg,encrypted FROM oceanbase.V$OB_ENCRYPTED_TABLES;
+   +------------+---------------+-----------+
+   | table_name | encryptionalg | encrypted |
+   +------------+---------------+-----------+
+   | t1         | aes-256       | YES       |
+   +------------+---------------+-----------+
+   1 row in set
+   ```
+
+   `encryptionalg` 为 `aes-256`，且 `encrypted` 为 `YES` 则表示表加密配置成功。
+
+   更多视图 `V$OB_ENCRYPTED_TABLES` 的字段及说明信息请参见 [V$OB_ENCRYPTED_TABLES](../../../../7.reference/14.system-reference/4.system-view-for-mysql/3.performance-view-5/91.v-encrypted_tables-3.md)。
