--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -56,7 +56,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM STOP ZONE 'zone_name';
+      obclient [(none)]> ALTER SYSTEM STOP ZONE 'zone_name';
       ```
 
       示例：
@@ -74,7 +74,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM FORCE STOP ZONE 'zone_name';
+      obclient [(none)]> ALTER SYSTEM FORCE STOP ZONE 'zone_name';
       ```
 
       示例：
@@ -92,7 +92,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM ISOLATE ZONE 'zone_name';
+      obclient [(none)]> ALTER SYSTEM ISOLATE ZONE 'zone_name';
       ```
 
       示例：
