--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -21,13 +21,13 @@
 2. 通过命令行工具进入 `/home/admin/oceanbase/etc` 目录。
 
    ```shell
-   cd /home/admin/oceanbase/etc
+   [admin@xxx /]$ cd /home/admin/oceanbase/etc
    ```
 
 3. 执行以下命令，查看文件中的内容。
 
    ```shell
-   strings observer.config.bin
+   [admin@xxx etc]$ strings observer.config.bin
    ```
 
 ## 通过 SHOW 语句查看集群配置项
@@ -49,7 +49,7 @@
    语句如下：
 
    ```sql
-   obclient [none]> SHOW PARAMETERS [SHOW_PARAM_OPTS];
+   obclient [xxx]> SHOW PARAMETERS [SHOW_PARAM_OPTS];
    ```
 
    其中，[SHOW_PARAM_OPTS] ：可指定为 `[LIKE 'pattern' | WHERE expr]`，`WHERE expr` 中可以指定的列属性与 `SHOW PARAMETERS` 返回结果中的列属性一致。
@@ -57,7 +57,7 @@
    示例如下：
 
    ```sql
-   obclient [none]> SHOW PARAMETERS LIKE '%syslog_level%';
+   obclient [(none)]> SHOW PARAMETERS LIKE '%syslog_level%';
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
@@ -111,7 +111,7 @@
    查询示例如下：
 
    ```sql
-   obclient > SELECT * FROM GV$OB_PARAMETERS WHERE NAME LIKE '%syslog_level%';
+   obclient [(none)]> SELECT * FROM GV$OB_PARAMETERS WHERE NAME LIKE '%syslog_level%';
    +----------------+----------+-------+---------+-----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+-------------------+
    | SVR_IP         | SVR_PORT | ZONE  | SCOPE   | TENANT_ID | NAME         | DATA_TYPE | VALUE | INFO                                                                                                                   | SECTION  | EDIT_LEVEL        |
    +----------------+----------+-------+---------+-----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+-------------------+
