--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -26,7 +26,7 @@
 2. 执行以下命令，进行节点隔离。
 
    ```sql
-   obclient [none]> ALTER SYSTEM STOP SERVER 'svr_ip:svr_port';
+   obclient [(none)]> ALTER SYSTEM STOP SERVER 'svr_ip:svr_port';
    ```
 
    相关参数说明如下：
@@ -38,7 +38,7 @@
    示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882';
+   obclient [(none)]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882';
    ```
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `STATUS` 字段，可以看到字段值仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为停止服务的时间点。
@@ -48,7 +48,7 @@
 3. 执行以下命令，对待重启的节点进行转储操作，以便缩短重启后回放 Redolog 的时间，加速重启。
 
    ```sql
-   obclient [none]> ALTER SYSTEM MINOR FREEZE SERVER = ('svr_ip:svr_port');
+   obclient [(none)]> ALTER SYSTEM MINOR FREEZE SERVER = ('svr_ip:svr_port');
    ```
 
    相关参数说明如下：
@@ -60,7 +60,7 @@
    示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM  MINOR FREEZE SERVER = ('xx.xx.xx.10:2882');
+   obclient [(none)]> ALTER SYSTEM  MINOR FREEZE SERVER = ('xx.xx.xx.10:2882');
    ```
 
 4. 停止 observer 进程。
@@ -121,7 +121,7 @@
 7. 执行以下命令，启动节点服务。
 
    ```sql
-   obclient [none]> ALTER SYSTEM START SERVER 'svr_ip:svr_port';
+   obclient [(none)]> ALTER SYSTEM START SERVER 'svr_ip:svr_port';
    ```
 
    其中：
@@ -133,7 +133,7 @@
    示例如下：
 
    ```sql
-   obclient [none]> > ALTER SYSTEM START SERVER 'xx.xx.xx.10:2882';
+   obclient [(none)]> ALTER SYSTEM START SERVER 'xx.xx.xx.10:2882';
    ```
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中的 `START_SERVICE_TIME` 字段，该字段表示节点启动服务的时间。如果该值为 `NULL`，则表示该节点的服务还没有启动。
