--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -34,7 +34,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
 
       ```sql
-      obclient [none]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
+      obclient [(none)]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
       +---------+-----------+--------+-------+----------------+
       | UNIT_ID | TENANT_ID | STATUS | ZONE  | SVR_IP         |
       +---------+-----------+--------+-------+----------------+
@@ -61,7 +61,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
       语句如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'svr_ip:svr_port'; 
+      obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'svr_ip:svr_port'; 
       ```
 
        相关参数说明如下：
@@ -83,7 +83,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    语句如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
+   obclient [(none)]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
    ```
 
    相关参数说明如下：
@@ -97,13 +97,13 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    删除 `zone1` 中的一台 OBServer，示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.237:2882" zone='zone1'
+   obclient [(none)]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.237:2882" zone='zone1'
    ```
 
 2. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
 
    ```sql
-   obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
    如果列表中已经查询不到该节点，则表示删除成功。如果列表中仍然有该节点，且该节点的状态为 `DELETING`，则表示该节点仍然在删除状态中。
@@ -127,7 +127,7 @@ Cancel Delete Server 的具体操作如下：
    语句如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
+   obclient [(none)]> ALTER SYSTEM CANCEL DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
    ```
 
    相关参数说明如下：
@@ -141,13 +141,13 @@ Cancel Delete Server 的具体操作如下：
    示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'xx.xx.xx.237:2882' zone='zone1';
+   obclient [(none)]> ALTER SYSTEM CANCEL DELETE SERVER 'xx.xx.xx.237:2882' zone='zone1';
    ```
 
 3. 查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否取消删除成功。
 
    ```sql
-   obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
    如果待取消删除的 OBServer 的状态从 `DELETING` 变为 `ACTIVE`，则表示取消删除成功。
@@ -165,3 +165,8 @@ Cancel Delete Server 的具体操作如下：
 * [隔离节点](4.isolation-a-node.md)
 
 * [替换节点](7.replace-a-node.md）
+
+* [删除 Zone](9.delete-a-zone.md)
+
+* [副本迁移](链接暂时无法加)
+
