--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -55,7 +55,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM STOP SERVER 'svr_ip:svr_port'; 
+      obclient [(none)]> ALTER SYSTEM STOP SERVER 'svr_ip:svr_port'; 
       ```
 
       示例：
@@ -73,7 +73,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM FORCE STOP SERVER 'svr_ip:svr_port'; 
+      obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER 'svr_ip:svr_port'; 
       ```
 
       示例：
@@ -89,7 +89,7 @@
       语句如下：
 
       ```sql
-      ALTER SYSTEM ISOLATE SERVER 'svr_ip:svr_port'; 
+      obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'svr_ip:svr_port'; 
       ```
 
       示例：
