--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.replace-a-node.md
@@ -25,7 +25,7 @@
       查询示例如下：
 
       ```sql
-      obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+      obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
       +-------------+----------+----+--------------+----------+-----------------+--------+----------------------------+-----------+-----------------------+----------------------------+----------------------------+-------------------------------------------------------------------------------------------+
       | SVR_IP      | SVR_PORT | ID | ZONE         | SQL_PORT | WITH_ROOTSERVER | STATUS | START_SERVICE_TIME         | STOP_TIME | BLOCK_MIGRATE_IN_TIME | CREATE_TIME                | MODIFY_TIME                | BUILD_VERSION                                                                             |
       +-------------+----------+----+--------------+----------+-----------------+--------+----------------------------+-----------+-----------------------+----------------------------+----------------------------+-------------------------------------------------------------------------------------------+
@@ -46,7 +46,7 @@
       语句如下：
 
       ```sql
-      obclient [none]> SELECT  unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = 'svr_ip';
+      obclient [(none)]> SELECT  unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = 'svr_ip';
       ```
 
       其中，`svr_ip` 需要根据实际情况填写待替换节点的 IP 地址。
@@ -54,7 +54,7 @@
       查询示例如下：
 
       ```sql
-      obclient [none]> SELECT unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = 'xx.xx.xx.19';
+      obclient [(none)]> SELECT unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = 'xx.xx.xx.19';
       +---------+
       | unit_id |
       +---------+
@@ -71,7 +71,7 @@
       语句如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM MIGRATE UNIT unit_id DESTINATION 'svr_ip:svr_port';
+      obclient [(none)]> ALTER SYSTEM MIGRATE UNIT unit_id DESTINATION 'svr_ip:svr_port';
       ```
 
       相关参数说明如下：
@@ -85,13 +85,13 @@
       迁移示例如下：
       
       ```sql
-      obclient [none]> ALTER SYSTEM MIGRATE UNIT 1016 DESTINATION 'xx.xx.xx.156:2882';
+      obclient [(none)]> ALTER SYSTEM MIGRATE UNIT 1016 DESTINATION 'xx.xx.xx.156:2882';
       ```
 
    3. 查询 `oceanbase.DBA_OB_UNIT_JOBS` 视图，确认 Unit 的迁移进度。
 
       ```sql
-      obclient [none]> SELECT * FROM oceanbase.DBA_OB_UNIT_JOBS WHERE JOB_TYPE = 'MIGRATE_UNIT';
+      obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_UNIT_JOBS WHERE JOB_TYPE = 'MIGRATE_UNIT';
       +--------+--------------+------------+-------------+----------+----------------------------+----------------------------+-----------+---------+----------+------------+------------+-------------+
       | JOB_ID | JOB_TYPE     | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | UNIT_ID | SQL_TEXT | EXTRA_INFO | RS_SVR_IP  | RS_SVR_PORT |
       +--------+--------------+------------+-------------+----------+----------------------------+----------------------------+-----------+---------+----------+------------+------------+-------------+
@@ -112,7 +112,7 @@
       语句如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
+      obclient [(none)]> ALTER SYSTEM DELETE SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name']
       ```
 
       相关参数说明如下：
@@ -126,13 +126,13 @@
       示例如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.19:2882" zone='zone1'
+      obclient [(none)]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.19:2882" zone='zone1'
       ```
 
    2. 待操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认旧节点是否删除成功。
 
       ```sql
-      obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+      obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
       ```
 
       如果列表中已经查询不到旧节点信息，则表示删除成功。如果列表中仍然有该节点，且该节点的状态为 `DELETING`，则表示该节点仍然在删除状态中。
