--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.add-a-zone.md
@@ -19,7 +19,7 @@
    语句如下：
 
    ```sql
-   ALTER SYSTEM ADD ZONE zone_name [IDC [=] 'idc_name', REGION [=] 'region_name', ZONE_TYPE [=] 'READWRITE'];
+   obclient [(none)]> ALTER SYSTEM ADD ZONE zone_name [IDC [=] 'idc_name', REGION [=] 'region_name', ZONE_TYPE [=] 'READWRITE'];
    ```
 
    相关参数说明如下：
@@ -59,7 +59,9 @@
 
 ## 后续操作
 
-增加 Zone 后，如果需要进一步在集群中使用该 Zone，还需要在该 Zone 上添加 OBServer，重新分配资源，并增加副本信息，以便达到扩容的目的。
+* 增加 Zone 后，如果需要进一步在集群中使用该 Zone，还需要在该 Zone 上添加 OBServer，重新分配资源，并增加副本信息，以便达到扩容的目的。
+
+* 增加 Zone 后，如果需要修改 Zone 所在的 `idc_name` 或 `region_name`，您可以通过修改 Zone 来完成，详细操作可参见 [修改 Zone](10.modify-a-zone.md)。
 
 ## 相关文档
 
