--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.modify-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.modify-a-zone.md
@@ -19,7 +19,7 @@
    语句如下：
 
    ```sql
-   ALTER SYSTEM {ALTER|CHANGE|MODIFY} ZONE zone_name SET [IDC [=]'idc_name', REGION [=]'region_name'];
+   obclient [(none)]> ALTER SYSTEM {ALTER|CHANGE|MODIFY} ZONE zone_name SET [IDC [=]'idc_name', REGION [=]'region_name'];
    ```
 
    相关参数说明如下：
@@ -41,7 +41,7 @@
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
 
    ```sql
-   obclient [test]> SELECT * FROM oceanbase.DBA_OB_ZONES;
+   obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ZONES;
    +-------+----------------------------+----------------------------+----------+-----+----------+-----------+
    | ZONE  | CREATE_TIME                | MODIFY_TIME                | STATUS   | IDC | REGION   | TYPE      |
    +-------+----------------------------+----------------------------+----------+-----+----------+-----------+
