--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -180,7 +180,7 @@
    2. 执行以下命令，向集群的 Zone 中添加节点。
 
       ```sql
-      obclient [none]> ALTER SYSTEM ADD SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name'];
+      obclient [(none)]> ALTER SYSTEM ADD SERVER 'svr_ip:svr_port' [,'svr_ip:svr_port'...] [ZONE [=] 'zone_name'];
       ```
 
       相关参数说明如下：
@@ -194,7 +194,7 @@
       示例如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM ADD SERVER 'xx.xx.xx.10:2882;xx.xx.xx.11:2882;xx.xx.xx.12:2882' ZONE 'zone4';
+      obclient [(none)]> ALTER SYSTEM ADD SERVER 'xx.xx.xx.10:2882;xx.xx.xx.11:2882;xx.xx.xx.12:2882' ZONE 'zone4';
       ```
 
       该操作会将 OBServer 服务器加入到服务列表，只有服务列表中的 OBServer 服务器才可以提供服务。
@@ -204,7 +204,7 @@
    查询示例如下：
 
    ```sql
-   obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
    列表中有刚刚添加的 OBServer 服务器，则表示添加成功。
