--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
@@ -1,6 +1,6 @@
 # 删除 Zone
 
-删除 Zone 通常用于集群缩容的场景中。
+删除 Zone 通常用于集群缩容的场景中。通过删除 Zone 来进行缩容的详细操作请参见 [在集群中减少 Zone](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/2.shrink-1/1.reduce-zone-from-cluster.md)。
 
 ## 前提条件
 
@@ -23,7 +23,7 @@
    语句如下：
 
    ```sql
-   ALTER SYSTEM DELETE ZONE zone_name;
+   obclient [(none)]> ALTER SYSTEM DELETE ZONE zone_name;
    ```
 
    其中，`zone_name` 表示待删除的 Zone 的名称。每条语句每次仅支持删除一个 Zone。如果需要删除多个 Zone，则需要重复执行该语句。
@@ -37,7 +37,7 @@
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
 
    ```sql
-   obclient [test]> SELECT * FROM oceanbase.DBA_OB_ZONES;
+   obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ZONES;
    +-------+----------------------------+----------------------------+--------+-----+----------+-----------+
    | ZONE  | CREATE_TIME                | MODIFY_TIME                | STATUS | IDC | REGION   | TYPE      |
    +-------+----------------------------+----------------------------+--------+-----+----------+-----------+
