--- a/zh-CN/5.administrator-guide/9.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/5.execution-of-parallel-query.md
+++ b/zh-CN/5.administrator-guide/9.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/5.execution-of-parallel-query.md
@@ -13,7 +13,7 @@
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
-  <p>当前版本不支持 NO_USE_PX Hint。</p>
+  <p>当前版本不支持关闭并行查询 NO_USE_PX Hint。</p>
 </main>
 
 ## 打开并行查询 3 种方式
