--- a/zh-CN/6.manage/6.backup_and_restoration/2.backup_and_restoration_management/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup_and_restoration/2.backup_and_restoration_management/4.data-backup/2.initiate-full-data-backup.md
@@ -18,9 +18,10 @@
 
 2. （可选）执行以下命令，设置备份的密码。
 
-   >**说明**
-   >
-   >该密码为备份后的备份集的密码。如果设置了该选项，在使用该备份集进行恢复时，需要输入该密码，且该密码不能被删除。
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>该密码为备份后的备份集的密码。如果设置了该选项，在使用该备份集进行恢复时，需要输入该密码，且该密码不能被删除。</p>
+   </main>
 
    ```sql
    obclient [(none)]> SET ENCRYPTION ON IDENTIFIED BY 'password' ONLY;
@@ -71,9 +72,10 @@
       obclient [(none)]> ALTER SYSTEM BACKUP TENANT = mysql_tenant;
       ```
 
-      >**说明**
-      >
-      >同时指定多个租户时，租户名之间使用英文逗号 (`,`) 分隔。
+      <main id="notice" type='explain'>
+        <h4>说明</h4>
+        <p>同时指定多个租户时，租户名之间使用英文逗号 (`,`) 分隔。</p>
+      </main>
 
       命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起全量数据备份。
 
