修改：链接转换

--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -53,7 +53,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    [root@hostname /]# rpm -ivh t-oceanbase-antman-x.x.x-xxxxxxxxxxxx.alios7.x86_64.rpm
    ```
 
-   安装 Antman 的详细信息，请参见 [安装 oat-cli](../../4.deploy-oceanbase/4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md)。
+   安装 Antman 的详细信息，请参见 [安装 oat-cli](../../4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md)。
 
 3. 添加 admin 用户。
 
