--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
@@ -73,4 +73,4 @@
 
 ## 相关文档
 
-集群部署完成后，需要创建业务租户，详细信息请参见 [创建租户](../5.create-an-oceanbase-tenant/2.create-a-tenant.md)。
+集群部署完成后，需要创建业务租户，详细信息请参见 [创建租户](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md)。
