--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md
@@ -185,6 +185,6 @@ Query OK, 0 rows affected
 
 * 租户创建完成后的连接信息，请参见 [租户创建后验证](3.verify-after-deployment.md)。
 * 更多创建资源单元的详细信息，请参见 [CREATE RESOURCE UNIT](../../../../7.reference/4.development-guide-refactoring\1.sql-syntax\1.system-tenants\7.create-resource-unit.md)。
-* 更多创建资源池的详细信息，请参见 [CREATE RESOURCE POOL](../../../../7.reference/4.development-guide-refactoring\1.sql-syntax\1.system-tenants/6.create-resource-pool.md)。
-* 更多创建租户的详细信息，请参见 [CREATE TENANT](../../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
-* 更多修改用户密码的详细信息，请参见 [ALTER USER](../../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/8.alter-user-of-mysql-mode.md) 和 [SET PASSWORD](../../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/55.set-password-of-mysql-mode.md)。
+* 更多创建资源池的详细信息，请参见 [CREATE RESOURCE POOL](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
+* 更多创建租户的详细信息，请参见 [CREATE TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
+* 更多修改用户密码的详细信息，请参见 [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/8.alter-user-of-mysql-mode.md) 和 [SET PASSWORD](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/55.set-password-of-mysql-mode.md)。
