--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
@@ -145,4 +145,4 @@ start_and_end_option:
 
 ## 更多信息
 
-通过 `SELECT INTO OUTFILE` 方法导出的文件，可以通过 `LOAD DATA` 语句进行导入，详细方法，请参考 [使用 LOAD DATA 导入数据](9.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md)。
+通过 `SELECT INTO OUTFILE` 方法导出的文件，可以通过 `LOAD DATA` 语句进行导入，详细方法，请参考 [使用 LOAD DATA 导入数据](../7.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md)。
