--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
@@ -273,5 +273,5 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 ## 相关文档
 
 * 更多集群启动参数的详细信息，请参见 [系统配置项总览](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)。
-* 修改用户密码的详细信息，请参见 [ALTER USER](../../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/8.alter-user-of-mysql-mode.md)。
-* 集群部署完成后，需要创建业务租户，详细信息请参见 [创建租户](../5.create-an-oceanbase-tenant-command-line/2.create-tenant.md)。
+* 修改用户密码的详细信息，请参见 [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/8.alter-user-of-mysql-mode.md)。
+* 集群部署完成后，需要创建业务租户，详细信息请参见 [创建租户](../5.create-oceanbase-tenant-command-line/2.create-tenant.md)。
