--- a/zh-CN/4.deploy-oceanbase/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
+++ b/zh-CN/4.deploy-oceanbase/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
@@ -14,9 +14,9 @@ OceanBase 数据库社区版支持多种部署方式：
 
 ## 标准部署
 
-* 对于线下环境，建议使用 OBD 进行标准部署；具体操作参见 [部署 OceanBase 数据库生产环境](../4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md)
+* 对于线下环境，建议使用 OBD 进行标准部署；具体操作参见 [部署 OceanBase 数据库生产环境](2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md)
 
-* 对于 kubernetes 环境，建议使用 ob-operator 的方式部署；具体操作参见 [在 Kubernetes 集群中部署 OceanBase 数据库](../4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md)
+* 对于 kubernetes 环境，建议使用 ob-operator 的方式部署；具体操作参见 [在 Kubernetes 集群中部署 OceanBase 数据库](../5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md)
 
 ## 在线体验
 
