--- a/zh-CN/5.oceanbase-database-overview/6.user-interfaces-and-query-languages/1.sql/5.distributed-execution-plans/3.enable-and-disable-parallel-query.md
+++ b/zh-CN/5.oceanbase-database-overview/6.user-interfaces-and-query-languages/1.sql/5.distributed-execution-plans/3.enable-and-disable-parallel-query.md
@@ -1,4 +1,4 @@
-启用和关闭并行查询 
+启用并行查询 
 ==============================
 
 本文主要通过具体示例介绍 OceanBase 数据库如何启用分区表并行查询、非分区表并行查询、多表并行查询和关闭并行查询，以及并行执行相关的系统视图。
@@ -265,36 +265,6 @@ Outputs & filters:
 
 
 通过计划可以看出，`p2table` 仅需要扫描一个分区，在默认情况下不进行并行查询；`p1table` 需要扫描两个分区，默认情况下进行并行查询。同样，也可以通过添加 `PARALLEL` Hint 的方式改变并行度，使 `p2table` 针对一个分区的查询变为分区内并行查询。
-
-关闭并行查询 
----------------------------
-
-分区表在查询的时候会自动启动并行查询（查询分区个数大于 1），如果不想启动并行查询，可以使用添加 Hint `/*+ NO_USE_PX */` 来关闭并行查询。
-
-例如，针对分区表 `ptable`，添加 Hint `/*+ NO_USE_PX */` 来关闭并行查询，通过生成的执行计划可以看出对 `ptable` 表的扫描没有进行并行查询。
-
-```sql
-obclient>EXPLAIN SELECT /*+ NO_USE_PX */ * FROM ptable\G;
-*************************** 1. row ***************************
-Query Plan: ================================================
-|ID|OPERATOR           |NAME  |EST. ROWS|COST  |
-------------------------------------------------
-|0 |EXCHANGE IN DISTR  |      |1600000  |737992|
-|1 | EXCHANGE OUT DISTR|      |1600000  |618888|
-|2 |  TABLE SCAN       |ptable|1600000  |618888|
-================================================
-
-Outputs & filters:
--------------------------------------
-  0 - output([INTERNAL_FUNCTION(ptable.c1, ptable.c2)]), filter(nil)
-  1 - output([INTERNAL_FUNCTION(ptable.c1, ptable.c2)]), filter(nil)
-  2 - output([ptable.c1], [ptable.c2]), filter(nil),
-      access([ptable.c1], [ptable.c2]), partitions(p[0-15])
-
-1 row in set
-```
-
-
 
 并行执行相关的系统视图 
 --------------------------------
