--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/6.data-type-conversion-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/6.data-type-conversion-of-oracle-mode.md
@@ -57,13 +57,11 @@
 | NUMBER              | Yes      | Yes          | Yes       | Yes           | -        | -                                  | -          | Yes              | Yes               | -       | -        | -        |
 | BINARY_FLOAT        | Yes      | Yes          | Yes       | Yes           | -        | -                                  | Yes        | -                | Yes               | -       | -        | -        |
 | BINARY_DOUBLE       | Yes      | Yes          | Yes       | Yes           | -        | -                                  | Yes        | Yes              | -                 | -       | -        | -        |
-| RAW                 | Yes      | Yes          | Yes       | Yes           | -        | Yes [<sup>1</sup>](#refer-anchor) | -          | -                | -                 | -       | Yes      | -        |
+| RAW                 | Yes      | Yes          | Yes       | Yes           | -        | Yes ^[1](#1)^ | -          | -                | -                 | -       | Yes      | -        |
 | CLOB                | Yes      | Yes          | Yes       | Yes           | -        | -                                  | -          | -                | -                 | -       | -        | Yes      |
 | BLOB                | -        | -            | -         | -             | -        | -                                  | -          | -                | -                 | Yes     | -        | -        |
 
-<div id="refer-anchor"></div>
-
-[1] 您不能直接将 `RAW` 转换为 `INTERVAL`，但是可以使用 `UTL_RAW.CAST_TO_VARCHAR2([RAW])` 将 `RAW` 转换为 `VARCHAR2`，然后将所得的 `VARCHAR2` 值转换为 `INTERVAL`。
+^[1]()^ 您不能直接将 `RAW` 转换为 `INTERVAL`，但是可以使用 `UTL_RAW.CAST_TO_VARCHAR2([RAW])` 将 `RAW` 转换为 `VARCHAR2`，然后将所得的 `VARCHAR2` 值转换为 `INTERVAL`。
 
 ### 不同字符类型之间的隐式转换
 
