--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
@@ -52,7 +52,7 @@
 
   MySQL Connector/J 是 MySQL 官方提供的 JDBC 驱动程序。
 
-  使用 Java 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 Java 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode.md/2.java-application-of-mysql-model.md)。
+  使用 Java 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 Java 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode/2.java-application-of-mysql-model.md)。
 
 * C 驱动（OceanBase Connector/C）
   
@@ -67,13 +67,13 @@
     <p>libobclient 生成的 so 文件为 <code>libobclient.so</code>（对应 MySQL 的 <code>libmysqlclient.so</code>），OceanBase 数据库安装后的命令行工具是 OBClient（对应 MySQL 的命令行工具）。 </p>
   </main>
 
-  使用 C 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 C 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode.md/3.c-application-of-mysql-model.md)。
+  使用 C 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 C 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md)。
 
 * Python 驱动（PyMySQL）
   
   PyMySQL 是在 Python3.x 版本中用于连接 MySQL 服务器的一个库。遵循 Python 数据库 API v2.0 规范，并包含了 pure-Python MySQL 客户端库。在 OceanBase 数据库的 MySQL 模式下，用户可以使用 PyMySQL 驱动为 Python 应用程序提供与 OceanBase 数据库的连接。
 
-  使用 Python 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 Python 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode.md/1.python-application-of-mysql-model.md)。
+  使用 Python 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 Python 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode/1.python-application-of-mysql-model.md)。
 
 ## ORM 框架
 
