--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -53,7 +53,7 @@
 
   OceanBase Connector/J 采用一键安装模式，驱动安装包名称为：`oceanbase-client-[版本号].jar`。请联系技术支持人员获取 OceanBase Connector/J 驱动程序安装包。关于具体安装步骤，请参见官网文档 [OceanBase Connector/J](https://www.oceanbase.com/docs/enterprise/oceanbase-connector-j-cn)。
 
-   使用 Java 应用程序连接 OceanBase 数据库的具体操作示例请参见 [Java 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode.md/2.java-application-of-oracle-model.md)。
+   使用 Java 应用程序连接 OceanBase 数据库的具体操作示例请参见 [Java 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md)。
 
 * C 驱动（OBCI）
   
@@ -63,13 +63,13 @@
 
   OceanBase 提供的 OBCI 是与 Oracle OCI 兼容的 OceanBase C 语言调用接口，提供了与 OCI 兼容的功能特性。使用 Oracle OCI 编写的 C 语言应用程序时，无需修改应用程序源代码，只需在链接时指定运行时库为 OBCI 库，该库文件默认安装到 `/u01/obclient/lib` 路径下。
 
-  使用 C 应用程序连接 OceanBase 数据库的具体操作示例请参见 [C 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode.md/3.c-application-of-oracle-model.md)。
+  使用 C 应用程序连接 OceanBase 数据库的具体操作示例请参见 [C 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md)。
 
 * Python 驱动
   
   OceanBase Connector/J 使用标准 Java 数据库连接 (JDBC) API 为 Python 应用程序提供连接到 OceanBase 数据库的驱动程序，不需要额外的 Python 模块。
 
-  使用 Python 应用程序连接 OceanBase 数据库的具体操作示例请参见 [Python 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode.md/1.python-application-of-oracle-model.md)。
+  使用 Python 应用程序连接 OceanBase 数据库的具体操作示例请参见 [Python 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md)。
 
 ## ORM 框架
 
