根据华庭的comments修改

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/13.modify-cluster-parameters.md
@@ -7,6 +7,7 @@
             <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群配置项，用户租户只能查看集群配置项，无法设置集群配置项。</p>
           </main>
 
+有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
 
 ## 操作步骤
 
@@ -29,9 +30,9 @@
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
-   | zone2 | observer | xx.xx.xx.238   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
-   | zone3 | observer | xx.xx.xx.218   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
-   | zone1 | observer | xx.xx.xx.237   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone2 | observer | 172.xx.xx.xx   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone3 | observer | 172.xx.xx.xx   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone1 | observer | 172.xx.xx.xx   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    3 rows in set
    ```
@@ -99,4 +100,16 @@
 
 ## 相关文档
 
-更多集群配置项相关的介绍信息，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md）。
+关于集群配置项的更多内容，请参见以下信息：
+
+* [查看集群配置项](12.view-cluster-parameters.md)
+
+* [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)
+
+* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-for-mysql/1.overview-of-system-variables-3.m)
+
+* [设置参数](../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md)
+
+* [设置变量](../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/3.set-variables.md)
+
+有关每个配置项的详细介绍，请参见 《参考指南》 的 **系统参考** 章节。
