--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -33,12 +33,12 @@
 
    * `svr_ip`：表示待停止的节点所在的 IP。
 
-   * `svr_port`：表示待停止的节点的 RPC 端口。
+   * `svr_port`：表示待停止的节点的 RPC 端口，默认为 2882。
 
    示例如下：
 
    ```sql
-   obclient [(none)]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882';
+   obclient [(none)]> ALTER SYSTEM STOP SERVER '172.xx.xx.xx:2882';
    ```
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `STATUS` 字段，可以看到字段值仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为停止服务的时间点。
@@ -55,12 +55,12 @@
 
    * `svr_ip`：表示待重启的节点的 IP。
 
-   * `svr_port`：表示待重启的节点的 RPC 端口。
+   * `svr_port`：表示待重启的节点的 RPC 端口，默认为 2882。
 
    示例如下：
 
    ```sql
-   obclient [(none)]> ALTER SYSTEM  MINOR FREEZE SERVER = ('xx.xx.xx.10:2882');
+   obclient [(none)]> ALTER SYSTEM  MINOR FREEZE SERVER = ('172.xx.xx.xx:2882');
    ```
 
 4. 停止 observer 进程。
@@ -128,12 +128,12 @@
 
    * `svr_ip`：表示待停止的节点的 IP。
 
-   * `svr_port`：表示待停止的节点的 RPC 端口。
+   * `svr_port`：表示待停止的节点的 RPC 端口，默认为 2882。
 
    示例如下：
 
    ```sql
-   obclient [(none)]> ALTER SYSTEM START SERVER 'xx.xx.xx.10:2882';
+   obclient [(none)]> ALTER SYSTEM START SERVER '172.xx.xx.xx:2882';
    ```
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中的 `START_SERVICE_TIME` 字段，该字段表示节点启动服务的时间。如果该值为 `NULL`，则表示该节点的服务还没有启动。
