--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -194,7 +194,7 @@
       示例如下：
 
       ```sql
-      obclient [(none)]> ALTER SYSTEM ADD SERVER 'xx.xx.xx.10:2882;xx.xx.xx.11:2882;xx.xx.xx.12:2882' ZONE 'zone4';
+      obclient [(none)]> ALTER SYSTEM ADD SERVER '10.xx.xx.xx:2882;10.xx.xx.xx:2882;10.xx.xx.xx:2882' ZONE 'zone4';
       ```
 
       该操作会将 OBServer 服务器加入到服务列表，只有服务列表中的 OBServer 服务器才可以提供服务。
