--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -56,6 +56,24 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
       14 rows in set
       ```
 
+      其中：
+      
+      * `UNIT_ID`：表示节点上各 Unit 的 ID。
+
+      * `TENANT_ID`：表示该 Unit 所属的租户 ID。如果值为 `NULL`，表示当前 Unit 不属于任何租户。
+
+      * `STATUS`：表示该 Unit 当前的状态：
+      
+        * `ACTIVE`：正常状态
+
+        * `DELETING`：正在删除状态
+
+      * `ZONE`：表示该 Unit 所属的 Zone。
+
+      * `SVR_IP`：表示该 Unit 所属的节点 IP。
+
+      有关 oceanbase.DBA_OB_UNITS 视图的更多说明，请参见 [oceanbase.DBA_OB_UNITS ](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/61.oceanbase-dba_ob_units.md)。
+     
    2. 根据查询结果，执行以下命令，手动迁移 Unit。
 
       语句如下：
@@ -72,11 +90,13 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
        * `svr_port`：指定 Unit 迁移后的节点的 RPC 端口。
 
-      将 ID 为 `1012` 的 Unit 迁移到同 Zone 的 `xx.xx.xx.218` 服务器上的示例如下：
+      将 ID 为 `1012` 的 Unit 迁移到同 Zone 的 `172.xx.xx.xx` 服务器上的示例如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = 'xx.xx.xx.218:2882'; 
+      obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = '172.xx.xx.xx:2882'; 
       ```
+
+      更多关于 Unit 迁移的操作及说明，请参见 [副本迁移](暂时无法加链接)。
 
 3. 执行以下命令，删除节点。
 
@@ -97,7 +117,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    删除 `zone1` 中的一台 OBServer，示例如下：
 
    ```sql
-   obclient [(none)]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.237:2882" zone='zone1'
+   obclient [(none)]> ALTER SYSTEM DELETE SERVER "172.xx.xx.xx:2882" zone='zone1'
    ```
 
 2. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
@@ -134,14 +154,14 @@ Cancel Delete Server 的具体操作如下：
 
    * `svr_ip`：表示待取消删除的节点的 IP。
 
-   * `svr_port`：表示待取消删除的节点的 RPC 端口。
+   * `svr_port`：表示待取消删除的节点的 RPC 端口，默认为 2882。
 
    * `zone_name`：待取消删除的节点所属的 Zone。
 
    示例如下：
 
    ```sql
-   obclient [(none)]> ALTER SYSTEM CANCEL DELETE SERVER 'xx.xx.xx.237:2882' zone='zone1';
+   obclient [(none)]> ALTER SYSTEM CANCEL DELETE SERVER '172.xx.xx.xx:2882' zone='zone1';
    ```
 
 3. 查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否取消删除成功。
