--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.add-a-zone.md
@@ -30,7 +30,7 @@
   
    * `region_name`：指定 Zone 所在 Region 的名称，如果不指定，默认值为 `default_region`。
 
-   * `ZONE_TYPE`：指定 Zone 的类型，当前版本仅支持读写 Zone（READWRITE）。如果不指定，默认为读写 Zone。
+   * `ZONE_TYPE`：指定 Zone 的类型，当前版本仅支持读写 Zone（ReadWrite）。如果不指定，默认为读写 Zone。
 
    在集群中增加 `zone4` 的示例如下：
 
