修改 0.Quickly-experience-OceanBase.md

--- a/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
+++ b/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
@@ -216,7 +216,7 @@ obclient>
 +-------------------------------------+-------+-----------+--------+
  ```
 
-### 使用 Docker 部署 OceanBase 数据库
+## 使用 Docker 部署 OceanBase 数据库
 
 >**注意**
 >
